--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+@import "./stylesheets/base/app.scss";
+@import "./stylesheets/components/all.scss";
+@import "./stylesheets/utils/all.scss";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
