WIP: added Header and Video components. All components are functional

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,6 +1,6 @@
-@import "./stylesheets/base/app.scss";
-@import "./stylesheets/components/all.scss";
-@import "./stylesheets/utils/all.scss";
+@import "./base/app.scss";
+@import "./components/all.scss";
+@import "./utils/all.scss";
 
 body {
   margin: 0;
